[BUGFIX] Fix the issue of autoshowing the slide-leftpane on smaller screen devices. And also fix the loading anim align center bug.
Resolves: #38, #39
Releases: 1.2.12

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -23,7 +23,7 @@
 .img-icon {
   width: 40px;
   height: 40px;
-  margin:5px 10px 5px 0px;
+  margin: 5px 10px 5px 0px;
 }
 
 .main-icon {
@@ -48,15 +48,18 @@
 }
 
 .mail-sent-label {
-  padding:5px 14px 5px 14px; 
-  margin:0px; 
+  padding:5px 14px 5px 14px;
+  margin:0px;
   opacity:0.7
 }
 
-.g-content-loader {
-  font-size:150px; 
-  margin-left:60%; 
-  margin-top:5%;
+#g-content-loader {
+  font-size: 140px;
+  position:absolute;
+  width:140px;
+  height:100px;
+  margin:auto;
+  top:0;left:0;bottom:30%;right:0;
 }
 
 /*.table-hover tbody tr:hover td {
@@ -72,7 +75,7 @@ thead {
    background: rgba(217,217,217, 0.8);
 }
 
-/* 
+/*
   ================
     Cusom Navbar
   ================
